Fixed footer overlapping the bottom container

--- a/css/query.css
+++ b/css/query.css
@@ -64,7 +64,6 @@
     #icon-menu { display: inline-block; }
 
     footer {
-        width: 100%; 
-        text-align: center;
+        margin-top: 100px;
     }
 }
